sandbox/output
Anagram.java:15: error: illegal start of expression
            );
            ^
1 error
